--- a/views/about.pug
+++ b/views/about.pug
@@ -11,17 +11,17 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
-        h1 Name
+        h1 Shawn Daugherty Calhoun
 
-        //- Feel free to personalize the title below
-        p Full Stack JavaScript Developer
+        p FULL STACK JAVASCRIPT DEVELOPER
 
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I have put all of my chips in on programming with hopes of securing a position in the very near future. I've been completely dedicated to learning everything I can about coding, specifically the JavaScript Full Stack. This challenge has been as enriching as all of my prior educational and career experiences. I'm perpetually intrigued by coding as it satisfies my passion for problem-solving and creative expression. I've found the programming community to be incredible. It's amazing to me how much time coders spend helping peers work through problems. I'm eager to officially join that community as a working professional. I see myself doing this for the rest of my life and won't stop until I have contributed to building something amazing. 
+          p I have had extraordinary experiences across a range of professions. Leading large teams and making crucial decisions on the fly is second nature to me. My most recent position was at Nordstrom as a Customer Experience and Operations Manager. I was promoted yearly for the seven years I was there and eventually led a  team of fifty employees. Prior to that I spent five years at one of the nation's top fine dining establishments as the head of the waitstaff. Hiring,training, and coaching were top priorities as well as teaching impeccable service standards and wine knowledge. I also worked for five years as a Walt Disney World Decorator in Orlando, Florida while acquiring a Degree in Audio Production. 
+          p I am in fervent pursuit of a career as a web developer and am hoping this portfolio adequately demonstrates my newly acquired abilities and my will to succeed. Thanks for stopping by!   
+            
 
 
       .skills-contact-box.box
@@ -43,15 +43,16 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 503-957-4585
+          li 
+            a(href='mailto:shawn.allen.calhoun@gmail.com', target='_blank') shawn.allen.daugherty@gmail.com
+          li 
+            a(href='https://docs.google.com/document/d/1SpDF50rggpKks6rZdQEBCG0Oef8ELVwzdYN2Ep_nMaU/edit', target='_blank') Resume
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/s-d-calhoun/', target= '_blank') LinkedIn
+        a.btn-link(href='https://github.com/shauncy777', target= '_blank') GitHub
+        
 
     nav.nav
       a(href='/')
