--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,13 @@
 
+
+
+
+
+
+
+
+
+
 /*
   Main styles
 */
@@ -17,7 +26,482 @@ body {
 
 body {
   position: relative;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Play', sans-serif;
+  font-weight: normal;
+  line-height: 1.5;
+  color: #0a0a0a;
+  background: #e7e1be;
+  background: rgb(24, 24, 24);
+  transform: translateX(0px);
+  transition: all 0.4s ease-out;
+}
+
+article {
+background-color: rgb(250, 250, 250);
+-webkit-box-shadow:0px 0px 63px 7px #9c9c9c inset;
+-moz-box-shadow:0px 0px 63px 7px #9c9c9c inset;
+box-shadow:0px 0px 63px 7px #9c9c9c inset;
+}
+
+h1,h2,h3,h4,h5,p{
+  font-family: 'Play', sans-serif;
+}
+
+h5{
+  font-family: 'Cherry Cream Soda', cursive;
+  letter-spacing: .5px;
+ 
+}
+
+h6{
+  letter-spacing: 2.5px;
+  -webkit-text-transform: uppercase;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+p{
+  font-size: 15px;
+  color: rgb(14, 13, 13);
+}
+
+a {
+  text-decoration: none;
+}
+
+.wrapper {
+  width: 100%;
+  min-width: 320px;
+  height: 100%;
+  min-height: 100%;
+  background: #fefefe;
+}
+
+.flex-row-wrap {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 30px;
+}
+
+.box {
+  width: 100%;
+  max-width: 1200px;
+  padding: 40px 50px 30px;
+  background: #fefefe;
+  border-bottom: 1px solid #eaeaea;
+  
+}
+
+.box h1,
+.box h6 {
+  margin: 0 auto 8px;
+}
+
+.box h6 {
+  font-family: 'Cherry Cream Soda', cursive;
+  font-size: 1.4rem;
+  font-weight: bolder;
+  letter-spacing: 1.5px;
+}
+
+.box li {
+  font-family: 'Play', sans-serif;
+  font-size: 17px;
+}
+
+
+/*
+  Sidebar and mobile header
+*/
+nav.nav{
+  -webkit-box-shadow:0px 0px 27px 4px #9c9c9c inset;
+  -moz-box-shadow:0px 0px 27px 4px #9c9c9c inset;
+  box-shadow:0px 0px 27px 4px #9c9c9c inset;
+}
+
+nav {
+  width: 100%;
+  padding: 20px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+nav a {
+  width: 100%;
+  vertical-align: middle;
+  font-family: 'Play', sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #555; 
+}
+
+nav a span {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: -300px;
+  bottom: 0;
+  min-width: 300px;
+  max-width: 300px;
+  height: 100%;
+  min-height: 100%;
+  padding: 20px;
+  background: rgb(24, 24, 24);
+}
+
+.sidebar-info-box {
+  margin: auto;
+}
+
+.thumbnail-box {
+  padding: 0 10px;
+}
+
+.sidebar .thumbnail {
+  width: 75%;
+  max-width: 200px;
+  border: 2.7px dotted rgb(194, 194, 194);
+  border-radius: 50%;
+}
+
+.dev-intro-box {
+  padding: 10px;
+}
+
+.sidebar h5 {
+
+  color: #c44620;
+  margin: 0 auto 0.5rem;
+  text-transform: uppercase;
+}
+
+.sidebar p {
+  text-rendering: optimizeLegibility;
+  line-height: 1.6;
+  font-size: 17px;
+  letter-spacing: 2px;
+  color: rgb(197, 195, 195)
+}
+
+.sidebar a {
+  font-family: 'Play', sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: rgb(107, 107, 107);
+}
+
+.header {
+  vertical-align: middle;
+  color: #fefefe;
+  height: 40px;
+  padding: 0.5rem;
+  background: #0a0a0a;
+  border-left: 1px solid #0a0a0a;
+}
+
+.header span {
+  font-family: 'Play', sans-serif;
+  display: inline-block;
+  font-weight: bold;
+}
+
+.header button {
+  vertical-align: top;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  width: 20px;
+  height: 16px;
+  border: none;
+  background: #0a0a0a;
+  margin-top: 3px;
+  margin-right: 10px;
+  border-top: 2px solid #fefefe;
+  border-bottom: 2px solid #fefefe;
+}
+
+.header button:after {
+  content: '';
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 20px;
+  height: 2px;
+  background: #fefefe;
+}
+
+
+/*
+  Home page styles
+*/
+.portfolio-intro {
+  max-width: 1200px;
+  padding: 30px 50px 30px;
+  border-width: 2.7px 2.7px 2.7px 2.7px;
+border-style:dotted dotted dotted dotted;
+border-color:#000000 #000000 #000000 #000000;
+}
+
+.portfolio-intro h1 {
+  font-family: 'Cherry Cream Soda', cursive;
+  text-transform: uppercase;
+  font-size: 5.5rem;
+  text-shadow:0px 3px 5px #a5a1a1;
+  color: #2c2b2b;
+  margin: 0 auto 8px;
+  text-align: center;
+
+}
+
+.portfolio-intro p {
+  font-family: 'Play', sans-serif;
+  text-rendering: optimizeLegibility;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 185%;
+  margin: 0 auto;
+  padding-bottom: 0px;
+  color: #131212;
+ 
+}
+
+.projects-box h5 {
+  font-family: 'Play', sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  letter-spacing: 2px;
+  color: #050505;
+  margin: 0 auto 8px;
+  text-align: center;
+;
+  
+ 
+  
+}
+
+.cell a {
+  width: 100%;
+}
+
+.cell img {
+  width: 100%;
+  min-width: 100px;
+  border: 3px solid rgb(19, 17, 17);
+  border-radius: 7%;
+ 
+}
+
+
+/* 
+  About and project pages styles 
+*/
+.about-intro-box h1 {
+font-family: 'Cherry Cream Soda', cursive;
+text-transform: uppercase;
+text-shadow:0px 3px 5px #6e6c6c;
+color: #2c2b2b;
+
+}
+
+
+.project-info-box h1 {
+  font-family: 'Cherry Cream Soda', cursive;
+  font-size: 35px;
+  text-transform: uppercase;
+  text-shadow: 0px 3px 5px #6e6b6b;
+  color: #2c2b2b;
+
+}
+
+.about-intro-box p{
+  font-size: 25px;
+  font-family: 'Play', sans-serif;
+  letter-spacing: 2px;
+  color: #050505;
+
+}
+.project-info-box p {
+  font-size: 20px;
+  font-family: 'Play', sans-serif;
+  letter-spacing: 2px;
+  color: #050505;
+
+  
+}
+
+.about-bio p {
+  font-family: 'Play', sans-serif;
+  font-size: 18px;
+  letter-spacing: .5px;
+  color: #050505;
+  padding-top: 20px;
+}
+
+.skills-contact-box ul {
+  font-family: 'Play', sans-serif;
+  margin-bottom: 35px;
+}
+
+.project-img {
+  width: 100%;
+  max-width: 1065px;
+  margin-bottom: 15px;
+  border: 4px solid #fff;
+  border: 2px solid rgb(0, 0, 0);
+
+}
+
+.btn-link {
+  display: block;
+  text-align: center;
+  color: #fefefe;
+  width: 100%;
+  max-width: 255px;
+  margin: auto 0 5px 0;
+  padding: 0.85em 1em;
+  background-color: #333;
+  border: 1px solid transparent;
+}
+
+
+/* 
+  Tablet layout styles 
+*/
+@media screen and (min-width: 768px) {
+  .sidebar h5 {
+    font-size: 1.55rem;
+  }
+
+  .portfolio-intro h1 {
+    font-size: 3rem;
+  }
+
+  .box {
+    border-bottom: none;
+  }
+
+  .two-col .box:nth-of-type(1) {
+    width: 70%;
+    padding-right: 15px;
+  }
+  .two-col .box:nth-of-type(2) {
+    width: 30%;
+    padding-top: 50px;
+    padding-left: 15px;
+  }
+
+ 
+  .cell {
+    margin: 0 0 15px;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    
+  }
+
+  .cell:hover {
+    cursor: pointer;
+    animation-name: bounce;
+    -moz-animation-name: bounce;
+  }
+
+  .cell h5 {
+    font-size: 1.25rem;
+  }
+
+  .grid {
+
+    border-width: 0px 2.7px 2.7px 2.7px;
+    border-style:dotted dotted dotted dotted;
+    border-color:#000000 #000000 #000000 #000000
+  }  
+
+
+
+/* 
+  Desktop layout styles 
+*/
+@media screen and (min-width: 1024px) {
+  .sidebar {
+    left: 0;
+  }
+
+  .header {
+    display: none;
+  }
+
+  .wrapper {
+    margin-left: 300px;
+    width: calc(100% - 300px);
+  }
+
+  .inner-wrapper {
+    max-width: 1200px;
+  }
+}
+
+
+
+// CSS Bounce Hover Effect from https://codepen.io/halink0803/pen/qdVXqm
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
+}
+
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
+/*
+  Main styles
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  font-size: 100%;
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+body {
+  position: relative;
+  font-family: 'Oxanium', sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -32,11 +516,11 @@ article {
 }
 
 h1,h2,h3,h4,h5,p{
-  font-family: 'Merriweather', serif;
+  font-family: 'Oxanium', serif;
 }
 
 h5{
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Oxanium', sans-serif;
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
@@ -50,8 +534,10 @@ h6{
 }
 
 p{
-  font-size: 15px;
+  font-size: 14px;
+  font-weight: 700;
   color: #666;
+  text-align: center;
 }
 
 a {
@@ -104,7 +590,7 @@ a {
 
 /*
   Sidebar and mobile header
-*/
+
 nav {
   width: 100%;
   padding: 20px;
@@ -114,15 +600,16 @@ nav {
 nav a {
   width: 100%;
   vertical-align: middle;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 600;
-  font-size: 13px;
+  font-family: 'Oxanium', sans-serif;
+  font-weight: 900;
+  font-size: 14px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
   color: #555; 
 }
 
 nav a span {
+  font-size: 24px;
   font-weight: bold;
   font-size: 1.25rem;
 }
@@ -163,17 +650,18 @@ nav a span {
   margin: 0 auto 0.5rem;
 }
 
+
 .sidebar p {
   text-rendering: optimizeLegibility;
   line-height: 1.6;
-  font-size: 14px;
+  font-size: 16px;
   color: #999
 }
 
 .sidebar a {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 600;
-  font-size: 13px;
+  font-family: 'Oxanium', sans-serif;
+  font-weight: 900;
+  font-size: 17px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
   color: #555;
@@ -221,7 +709,7 @@ nav a span {
 
 /*
   Home page styles
-*/
+
 .portfolio-intro {
   max-width: 1200px;
   padding: 40px 50px 30px;
@@ -233,6 +721,9 @@ nav a span {
   margin: 0 auto 8px;
 }
 
+
+
+
 .portfolio-intro p {
   text-rendering: optimizeLegibility;
   font-size: 125%;
@@ -242,7 +733,7 @@ nav a span {
 }
 
 .projects-box h5 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Oxanium', sans-serif;
   font-weight: 500;
   font-size: 13px;
   letter-spacing: 2.25px;
@@ -265,7 +756,7 @@ nav a span {
 
 /* 
   About and project pages styles 
-*/
+
 .about-intro-box p,
 .project-info-box p {
   font-size: 125%;
@@ -303,7 +794,7 @@ nav a span {
 
 /* 
   Tablet layout styles 
-*/
+
 @media screen and (min-width: 768px) {
   .sidebar h5 {
     font-size: 1.25rem;
@@ -329,6 +820,20 @@ nav a span {
 
   .cell {
     margin: 0 0 15px;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+  }
+
+  .cell:hover {
+    cursor: pointer;
+    animation-name: bounce;
+    -moz-animation-name: bounce;
   }
 
   .cell h5 {
@@ -343,7 +848,7 @@ nav a span {
 
 /* 
   Desktop layout styles 
-*/
+
 @media screen and (min-width: 1024px) {
   .sidebar {
     left: 0;
@@ -362,3 +867,52 @@ nav a span {
     max-width: 1200px;
   }
 }
+
+.line-1{
+  position: relative;
+  top: 50%;
+  margin-top: 150px;
+  width: 24em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);  
+}
+
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+             blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 14em;}
+}
+
+// CSS Bounce Hover Effect from https://codepen.io/halink0803/pen/qdVXqm
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
+}
+
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
+
+*/
