--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -377,12 +377,23 @@ color: #2c2b2b;
 }
 
 
+/*
+  Mobile layout header fix
+*/
+@media screen and (max-width: 768px) {
+  .portfolio-intro h1 { 
+    font-size: 30px;
+  }
+ }
+
+
+
 /* 
   Tablet layout styles 
 */
 @media screen and (min-width: 768px) {
   .sidebar h5 {
-    font-size: 1.55rem;
+    font-size: 1.25rem;
   }
 
   .portfolio-intro h1 {
@@ -483,436 +494,3 @@ color: #2c2b2b;
 		transform:         translateY(-15px)
 	}
 }
-/*
-  Main styles
-
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  font-size: 100%;
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-  min-height: 100%;
-}
-
-body {
-  position: relative;
-  font-family: 'Oxanium', sans-serif;
-  font-weight: normal;
-  line-height: 1.5;
-  color: #0a0a0a;
-  background: #fefefe;
-  background: #000;
-  transform: translateX(0px);
-  transition: all 0.4s ease-out;
-}
-
-article {
-  background: #fefefe;
-}
-
-h1,h2,h3,h4,h5,p{
-  font-family: 'Oxanium', serif;
-}
-
-h5{
-  font-family: 'Oxanium', sans-serif;
-  letter-spacing: 2.5px;
-  -webkit-text-transform: uppercase;
-  text-transform: uppercase;
-}
-
-h6{
-  letter-spacing: 2.5px;
-  -webkit-text-transform: uppercase;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-p{
-  font-size: 14px;
-  font-weight: 700;
-  color: #666;
-  text-align: center;
-}
-
-a {
-  text-decoration: none;
-}
-
-.wrapper {
-  width: 100%;
-  min-width: 320px;
-  height: 100%;
-  min-height: 100%;
-  background: #fefefe;
-}
-
-.flex-row-wrap {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-gap: 30px;
-}
-
-.box {
-  width: 100%;
-  max-width: 1200px;
-  padding: 40px 50px 30px;
-  background: #fefefe;
-  border-bottom: 1px solid #eaeaea;
-}
-
-.box h1,
-.box h6 {
-  margin: 0 auto 8px;
-}
-
-.box h6 {
-  font-size: 1rem;
-  font-weight: bolder;
-  letter-spacing: 2px;
-}
-
-.box li {
-  font-size: 13px;
-}
-
-
-/*
-  Sidebar and mobile header
-
-nav {
-  width: 100%;
-  padding: 20px;
-  border-bottom: 1px solid #eaeaea;
-}
-
-nav a {
-  width: 100%;
-  vertical-align: middle;
-  font-family: 'Oxanium', sans-serif;
-  font-weight: 900;
-  font-size: 14px;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
-  color: #555; 
-}
-
-nav a span {
-  font-size: 24px;
-  font-weight: bold;
-  font-size: 1.25rem;
-}
-
-.sidebar {
-  position: absolute;
-  top: 0;
-  left: -300px;
-  bottom: 0;
-  min-width: 300px;
-  max-width: 300px;
-  height: 100%;
-  min-height: 100%;
-  padding: 20px;
-  background: #000;
-}
-
-.sidebar-info-box {
-  margin: auto;
-}
-
-.thumbnail-box {
-  padding: 0 10px;
-}
-
-.sidebar .thumbnail {
-  width: 100%;
-  max-width: 250px;
-  border: 4px solid #fff;
-}
-
-.dev-intro-box {
-  padding: 10px;
-}
-
-.sidebar h5 {
-  color: #fefefe;
-  margin: 0 auto 0.5rem;
-}
-
-
-.sidebar p {
-  text-rendering: optimizeLegibility;
-  line-height: 1.6;
-  font-size: 16px;
-  color: #999
-}
-
-.sidebar a {
-  font-family: 'Oxanium', sans-serif;
-  font-weight: 900;
-  font-size: 17px;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
-  color: #555;
-}
-
-.header {
-  vertical-align: middle;
-  color: #fefefe;
-  height: 40px;
-  padding: 0.5rem;
-  background: #0a0a0a;
-  border-left: 1px solid #0a0a0a;
-}
-
-.header span {
-  display: inline-block;
-  font-weight: bold;
-}
-
-.header button {
-  vertical-align: top;
-  cursor: pointer;
-  outline: none;
-  position: relative;
-  width: 20px;
-  height: 16px;
-  border: none;
-  background: #0a0a0a;
-  margin-top: 3px;
-  margin-right: 10px;
-  border-top: 2px solid #fefefe;
-  border-bottom: 2px solid #fefefe;
-}
-
-.header button:after {
-  content: '';
-  position: absolute;
-  top: 40%;
-  left: 0;
-  width: 20px;
-  height: 2px;
-  background: #fefefe;
-}
-
-
-/*
-  Home page styles
-
-.portfolio-intro {
-  max-width: 1200px;
-  padding: 40px 50px 30px;
-}
-
-.portfolio-intro h1 {
-  font-size: 1.5rem;
-  color: #0a0a0a;
-  margin: 0 auto 8px;
-}
-
-
-
-
-.portfolio-intro p {
-  text-rendering: optimizeLegibility;
-  font-size: 125%;
-  margin: 0 auto;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #eaeaea;
-}
-
-.projects-box h5 {
-  font-family: 'Oxanium', sans-serif;
-  font-weight: 500;
-  font-size: 13px;
-  letter-spacing: 2.25px;
-  text-transform: uppercase;
-  color: #222;;
-  margin: 0 auto 8px;
-}
-
-.cell a {
-  width: 100%;
-}
-
-.cell img {
-  width: 100%;
-  min-width: 100px;
-  border: 4px solid #fff;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
-}
-
-
-/* 
-  About and project pages styles 
-
-.about-intro-box p,
-.project-info-box p {
-  font-size: 125%;
-}
-
-.about-bio p {
-  font-size: 15px;
-  padding-top: 40px;
-}
-
-.skills-contact-box ul {
-  margin-bottom: 35px;
-}
-
-.project-img {
-  width: 100%;
-  max-width: 1065px;
-  margin-bottom: 15px;
-  border: 4px solid #fff;
-  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
-}
-
-.btn-link {
-  display: block;
-  text-align: center;
-  color: #fefefe;
-  width: 100%;
-  max-width: 255px;
-  margin: auto 0 5px 0;
-  padding: 0.85em 1em;
-  background-color: #333;
-  border: 1px solid transparent;
-}
-
-
-/* 
-  Tablet layout styles 
-
-@media screen and (min-width: 768px) {
-  .sidebar h5 {
-    font-size: 1.25rem;
-  }
-
-  .portfolio-intro h1 {
-    font-size: 3rem;
-  }
-
-  .box {
-    border-bottom: none;
-  }
-
-  .two-col .box:nth-of-type(1) {
-    width: 70%;
-    padding-right: 15px;
-  }
-  .two-col .box:nth-of-type(2) {
-    width: 30%;
-    padding-top: 50px;
-    padding-left: 15px;
-  }
-
-  .cell {
-    margin: 0 0 15px;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    -webkit-animation-iteration-count: infinite;
-  }
-
-  .cell:hover {
-    cursor: pointer;
-    animation-name: bounce;
-    -moz-animation-name: bounce;
-  }
-
-  .cell h5 {
-    font-size: 1.25rem;
-  }
-
-  .grid {
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  }
-}
-
-
-/* 
-  Desktop layout styles 
-
-@media screen and (min-width: 1024px) {
-  .sidebar {
-    left: 0;
-  }
-
-  .header {
-    display: none;
-  }
-
-  .wrapper {
-    margin-left: 300px;
-    width: calc(100% - 300px);
-  }
-
-  .inner-wrapper {
-    max-width: 1200px;
-  }
-}
-
-.line-1{
-  position: relative;
-  top: 50%;
-  margin-top: 150px;
-  width: 24em;
-  margin: 0 auto;
-  border-right: 2px solid rgba(255,255,255,.75);
-  font-size: 180%;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  transform: translateY(-50%);  
-}
-
-.anim-typewriter{
-  animation: typewriter 4s steps(44) 1s 1 normal both,
-             blinkTextCursor 500ms steps(44) infinite normal;
-}
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 14em;}
-}
-
-// CSS Bounce Hover Effect from https://codepen.io/halink0803/pen/qdVXqm
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-
-@keyframes bounce {
-	0%, 100%, 20%, 50%, 80% {
-		-webkit-transform: translateY(0);
-		-ms-transform:     translateY(0);
-		transform:         translateY(0)
-	}
-	40% {
-		-webkit-transform: translateY(-30px);
-		-ms-transform:     translateY(-30px);
-		transform:         translateY(-30px)
-	}
-	60% {
-		-webkit-transform: translateY(-15px);
-		-ms-transform:     translateY(-15px);
-		transform:         translateY(-15px)
-	}
-}
-
-*/
