--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,7 +136,7 @@ nav a {
   vertical-align: middle;
   font-family: 'Play', sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 13px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
   color: #555; 
@@ -206,7 +206,7 @@ nav a span {
 .header {
   vertical-align: middle;
   color: #fefefe;
-  height: 40px;
+  height: 50px;
   padding: 0.5rem;
   background: #0a0a0a;
   border-left: 1px solid #0a0a0a;
@@ -214,6 +214,8 @@ nav a span {
 
 .header span {
   font-family: 'Play', sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
   display: inline-block;
   font-weight: bold;
 }
@@ -227,7 +229,7 @@ nav a span {
   height: 16px;
   border: none;
   background: #0a0a0a;
-  margin-top: 3px;
+  margin-top: 7px;
   margin-right: 10px;
   border-top: 2px solid #fefefe;
   border-bottom: 2px solid #fefefe;
